# Odin

./: .env.example  .gitignore  dev.sh  docker-compose.windows.yml  docker-compose.yml
ai_service/: Dockerfile  requirements.txt
ai_service/app/: main.py
ai_service/app/acquisition/: dify_client.py  models.py  router.py  service.py
ai_service/app/analyze_input/: router.py  service.py
ai_service/app/embedding/: router.py  service.py
ai_service/app/generation/: router.py  service.py
ai_service/app/grading/: router.py  safe_parse.py  service.py
ai_service/app/intent/: classifier.py
ai_service/app/nlp/: fuzzy_match.py  shorthand.py  spacy_pipe.py  spellcheck.py  text_utils.py
ai_service/app/voice/: router.py  service.py
backend/: .env.example  Cargo.toml  Dockerfile
backend/migrations/: 0001_initial_schema.sql  0002_row_level_security.sql
backend/src/: config.rs  main.rs  state.rs
backend/src/ai_client/: mod.rs
backend/src/auth/: email.rs  errors.rs  handlers.rs  hash_utils.rs  jwt.rs  middleware.rs  mod.rs  otp.rs  password.rs  tokens.rs
backend/src/db/: mod.rs
backend/src/models/: assessment.rs  audit.rs  auth.rs  content.rs  journey.rs  knowledge.rs  mod.rs  track.rs
backend/src/routes/: health.rs  mod.rs
frontend/: Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  global.css
frontend/src/api/: auth.ts  client.ts  exercises.ts  projects.ts  tracks.ts
frontend/src/components/active-panel/: ActivePanel.tsx  ExerciseCard.tsx  MasteryBar.tsx  MatrixRenderer.tsx
frontend/src/components/auth/: AuthForm.tsx  AuthLayout.tsx  authLayout.css
frontend/src/components/auth/form/: AuthForm.tsx  authForm.css
frontend/src/components/auth/layout/: AuthLayout.tsx  authLayout.css
frontend/src/components/auth/signup/: CompleteStep.tsx  EmailStep.tsx  SignupFlow.tsx  VerifyStep.tsx  (+1 more)
frontend/src/components/list-view/: ListItem.tsx  SearchBar.tsx  listItem.css  searchBar.css
frontend/src/components/roadmap/: Legend.tsx  Roadmap.tsx  roadmap.css  sampleData.ts  types.ts
frontend/src/components/sidebar/: RecentsList.tsx
frontend/src/hooks/: useActivePanel.ts  useAuth.ts  useProjects.ts  useSidebarCollapsed.ts  useTracks.ts  useVoiceInput.ts
frontend/src/pages/Login/: Login.tsx
frontend/src/pages/Projects/: Projects.tsx  projects.css
frontend/src/pages/Session/: ChatView.tsx  EmptyLanding.tsx  Session.css  SessionLayout.tsx
frontend/src/pages/Signup/: Signup.tsx
frontend/src/pages/Tracks/: Tracks.tsx  tracks.css
frontend/src/types/: index.ts
(+37 files in other folders)
