[package]
name = "odin-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
async-trait = "0.1.89"
axum = "0.8.9"
axum-extra = { version = "0.12.6", features = ["typed-header", "cookie"] }
chrono = { version = "0.4.45", features = ["serde"] }
dotenvy = "0.15.7"
hex = "0.4.3"
jsonwebtoken = "10.4.0"
rand = "0.10.2"
rand_core = { version = "0.6", features = ["getrandom"] }
redis = { version = "1.4.1", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json"] }
subtle = "2.6.1"
thiserror = "2.0.18"
time = "0.3.53"
tokio = { version = "1.52.4", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.24.0", features = ["serde", "v4"] }
